[tool.poetry]
name = "repl_nix_MFTM"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"
SQLite4 = "0.1.1"
ezdxf = "1.1.1"
Werkzeug = "3.0.0"
trame = "3.2.8"
requests = "2.31.0"
pyvista = "0.42.3"
plotter = "1.3.20"
plotly = "5.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
